fixed background image cropping at bottom

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(../img/partly-cloudy.png);
+    background-image: url(../img/partly-cloudy.jpg);
     background-position: fixed;
     background-repeat: no-repeat;
     background-attachment: fixed;
